# workshop_docker_aovivo

./: Dockerfile  README.md  app.py  pyproject.toml
